Header container with desktop styles

--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
 
 <body>
 
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="header__container">
+    <h2 class="header__container--title">Reliable, efficient delivery</h2>
+    <h2 class="header__container--title"><b>Powered by Technology</b></h2>
+    <p class="header__container--paragraph">Our Artificial Intelligence powered tools use millions of project data points
+      to ensure that your project is successful</p>
+  </div>
 
-  Our Artificial Intelligence powered tools use millions of project data points
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+  <div class="cards__container">
+    <div class="cards__container--item-top">
+      <h1>Team Builder</h1>
+      <p>Scans our talent network to create the optimal team for your project</p>
+    </div>
+    <div class="cards__container--item-right">
+      <h1>Calculator</h1>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+    </div>
+    <div class="cards__container--item-bottom">
+      <h1>Karma</h1>
+      <p> Regularly evaluates our talent to ensure quality</p>
+    </div>
+    <div class="cards__container--item-left">
+      <h1>Supervisor</h1>
+      <p>Monitors activity to identify project roadblocks</p>
+    </div>
+  </div>
 
   <footer>
     <p class="attribution">
