Cards with the styles

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 
   <div class="cards__container">
     <div class="cards__container--item-top">
-      <h1>Team Builder</h1>
-      <p>Scans our talent network to create the optimal team for your project</p>
+      <h4 class="cards__container--title">Team Builder</h4>
+      <p class="cards__container--paragraph">Scans our talent network to create the optimal team for your project</p>
     </div>
     <div class="cards__container--item-right">
-      <h1>Calculator</h1>
-      <p>Uses data from past projects to provide better delivery estimates</p>
+      <h4 class="cards__container--title">Calculator</h4>
+      <p class="cards__container--paragraph">Uses data from past projects to provide better delivery estimates</p>
     </div>
     <div class="cards__container--item-bottom">
-      <h1>Karma</h1>
-      <p> Regularly evaluates our talent to ensure quality</p>
+      <h4 class="cards__container--title">Karma</h4>
+      <p class="cards__container--paragraph"> Regularly evaluates our talent to ensure quality</p>
     </div>
     <div class="cards__container--item-left">
-      <h1>Supervisor</h1>
-      <p>Monitors activity to identify project roadblocks</p>
+      <h4 class="cards__container--title">Supervisor</h4>
+      <p class="cards__container--paragraph">Monitors activity to identify project roadblocks</p>
     </div>
   </div>
 
