Desktop design ready

--- a/index.html
+++ b/index.html
@@ -17,26 +17,36 @@
   <div class="header__container">
     <h2 class="header__container--title">Reliable, efficient delivery</h2>
     <h2 class="header__container--title"><b>Powered by Technology</b></h2>
-    <p class="header__container--paragraph">Our Artificial Intelligence powered tools use millions of project data points
+    <p class="header__container--paragraph">Our Artificial Intelligence powered tools use millions of project data
+      points
       to ensure that your project is successful</p>
   </div>
 
-  <div class="cards__container">
-    <div class="cards__container--item-top">
-      <h4 class="cards__container--title">Team Builder</h4>
-      <p class="cards__container--paragraph">Scans our talent network to create the optimal team for your project</p>
-    </div>
-    <div class="cards__container--item-right">
-      <h4 class="cards__container--title">Calculator</h4>
-      <p class="cards__container--paragraph">Uses data from past projects to provide better delivery estimates</p>
-    </div>
-    <div class="cards__container--item-bottom">
-      <h4 class="cards__container--title">Karma</h4>
-      <p class="cards__container--paragraph"> Regularly evaluates our talent to ensure quality</p>
-    </div>
-    <div class="cards__container--item-left">
-      <h4 class="cards__container--title">Supervisor</h4>
-      <p class="cards__container--paragraph">Monitors activity to identify project roadblocks</p>
+  <div class="grid__container">
+    <div class="container__cards">
+      <div class="container__cards--top">
+        <h4 class="container__cards--title">Team Builder</h4>
+        <p class="container__cards--paragraph">Scans our talent network to create the optimal team for your project</p>
+        <img class="container__cards--icon" src="/images/icon-team-builder.svg" alt="team builder icon">
+      </div>
+
+      <div class="container__cards--right">
+        <h4 class="container__cards--title">Calculator</h4>
+        <p class="container__cards--paragraph">Uses data from past projects to provide better delivery estimates</p>
+        <img class="container__cards--icon" src="/images/icon-calculator.svg" alt="calculator icon">
+      </div>
+
+      <div class="container__cards--bottom">
+        <h4 class="container__cards--title">Karma</h4>
+        <p class="container__cards--paragraph"> Regularly evaluates our talent to ensure quality</p>
+        <img class="container__cards--icon" src="images/icon-karma.svg" alt="karma icon">
+      </div>
+
+      <div class="container__cards--left">
+        <h4 class="container__cards--title">Supervisor</h4>
+        <p class="container__cards--paragraph">Monitors activity to identify project roadblocks</p>
+        <img class="container__cards--icon" src="images/icon-supervisor.svg" alt="supervisor icon">
+      </div>
     </div>
   </div>
 
